[build-system]
requires = ["setuptools>=77.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nautobot-maintenance-windows"
version = "0.1.0"
description = "A Nautobot app for managing UTC maintenance and exclusion windows for network devices."
readme = "README.md"
requires-python = ">=3.12,<3.15"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [
    { name = "hibulla.com", email = "contact@hibulla.com" },
]
keywords = ["nautobot", "nautobot-app", "nautobot-plugin", "maintenance-windows"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: Django",
    "Intended Audience :: System Administrators",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: System :: Networking",
]
dependencies = [
    "nautobot>=3.1.0,<4.0.0",
]

[project.optional-dependencies]
dev = [
    "build",
    "coverage",
    "invoke",
    "ruff==0.15.20",
    "twine",
]

[project.urls]
Homepage = "https://github.com/hibulla/nautobot-maintenance-windows"
Documentation = "https://github.com/hibulla/nautobot-maintenance-windows/tree/main/docs"
Repository = "https://github.com/hibulla/nautobot-maintenance-windows"
Issues = "https://github.com/hibulla/nautobot-maintenance-windows/issues"
Changelog = "https://github.com/hibulla/nautobot-maintenance-windows/blob/main/CHANGELOG.md"
Support = "https://github.com/hibulla/nautobot-maintenance-windows/blob/main/SUPPORT.md"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["nautobot_maintenance_windows*"]

[tool.setuptools.package-data]
nautobot_maintenance_windows = ["templates/**/*.html"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["D", "F", "E", "W", "S", "I"]
ignore = ["D203", "D212", "D213", "D401", "D407", "D416", "E501"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"nautobot_maintenance_windows/migrations/*" = ["D"]
"nautobot_maintenance_windows/tests/*" = ["D", "S"]
